objects/Guest_CRM__c.object
<CustomObject>
    <fields>
        <fullName>Guest_Arrival_Date__c</fullName>
        <label>Guest Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guest_Email__c</fullName>
        <label>Guest Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Guest_Number__c</fullName>
        <label>Guest Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Guest CRM</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Guest CRM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guests CRM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>